--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
    # Proxy API requests to Spring Boot service
-    location /api {
+    location /api/ {
         proxy_pass http://springboot-service:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
